--- a/Atom1.html
+++ b/Atom1.html
@@ -87,7 +87,7 @@ document.getElementById("demo").innerHTML = x + y;</samp>
   </div>
 
 <hr>
-  <address>Antoine Ménard<br>524-349 McLeod St<br>Ottawa, ON<br>K2P 0S1 <small>(this is an address)</small></address>
+  <address>Antoine Ménard<br>123-654 Fake St<br>Ottawa, ON<br>K1K 1K1 <small>(this is an address)</small></address>
 
 
 </body>
