--- a/Atom1.html
+++ b/Atom1.html
@@ -5,8 +5,26 @@
     <link rel="stylesheet" type="text/css" href="Atom1.css">
     <html lang="en-US">
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="300">
+    <meta http-equiv="refresh" content="30">
     <title>My First HTML Document</title>
+
+    <script type="text/javascript" src="jquery.js">
+    </script>
+
+    <script>
+
+    $(document).ready(function() {
+    $("#div1").css("color","red");
+
+    });
+    </script>
+
+    <script>
+    function myFunction() {
+    document.getElementById("demo").innerHTML = "SUCCESS!!!";}
+
+    </script>
+
   </head>
 
 <body>
@@ -15,13 +33,21 @@
   <br>
   <h2>Using Atom Text Editor From Github (this is header 2)</h2>
 
+    <p id="demo">This sentence will change when the button below is pressed</p>
+
+    <button type="button" onclick="myFunction()">Click Me</button>
+
     <h3>Saturday October 29<sup>th</sup> 2016 (this is header 3)</h3>
 
     <img id="tony1" alt="Tony's headshot" src="tony1.jpeg">
 
+    <br />
+
+    <a href="http://jquery.com/">jQuery used here to change the text to color red:</a>
+
     <div id="div1">I finally received my <em>Lenovo Flex 4</em> laptop yesterday almost a week after purchasing it. It is a sweet machine at first glance. I will now be able to do some proper studying and programming, and more importantly some work at home on a proper machine.(this is a div)</div>
 
-    <p>This is <b>bold</b> vs <strong>strong</strong> vs <i>italic</i> vs <em>emphasized</em> vs <small>small</small> vs <del>deleted</del> vs <ins>inserted</ins> vs <sub>subscripted</sub> vs <sup>superscripted</sup> vs <mark>marked</mark></p>
+    <p>This is <b>bold</b> vs <strong>strong</strong> vs <i>italic</i> vs <em>emphasized</em> vs <small>small</small> vs <big>big</big> vs <del>deleted</del> vs <ins>inserted</ins> vs <sub>subscripted</sub> vs <sup>superscripted</sup> vs <mark>marked</mark></p>
 
     <p class="class1">This is a paragraph in its own class(let's specify a different font)</p>
 
@@ -30,13 +56,13 @@
 var y = 6;
 document.getElementById("demo").innerHTML = x + y;</samp>
 
-<br><br>
+<br />
+<br />
 
     <bdo dir="rtl">This is Bi-Directional Override</bdo>
     <small>(This is Bi-Directional Override)</small>
 
-
-  <br>
+  <br />
   <ol style="list-style-type:circle">
     <li>List item 1</li>
     <li>List item 2</li>
@@ -44,7 +70,7 @@ document.getElementById("demo").innerHTML = x + y;</samp>
     <li>List item 4</li>
     <li>List item 5</li>
   </ol>
-<br>
+  <br />
 
 
   <table width="50%">
@@ -66,19 +92,33 @@ document.getElementById("demo").innerHTML = x + y;</samp>
       <td>10</td>
       <td>11</td>
     </tr>
+    <tr>
+      <td>14</td>
+      <td>15</td>
+      <td>16</td>
+      <td>17</td>
+      <td>18</td>
+    </tr>
+    <tr>
+      <td>21</td>
+      <td>22</td>
+      <td>23</td>
+      <td>24</td>
+      <td>25</td>
+    </tr>
   </table>
 
   <hr/>
 
     <img id="endlessblue" align="middle" src="endlessblue.jpg" alt="endless blue image">
-  <br>
+  <br />
 
 
   <p class="quote">The only thing you ever have is now.     - Eckhart Tolle <small>(this is a quote)</small></p>
 
   <div id="float-clear">
 
-  <p id="p1">So, let's move on to <b>float</b> and <b>clear</b> properties. These are useful to allow paragraphs for example to move next to each other. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et dolor eleifend, laoreet risus a, pulvinar magna. Suspendisse commodo tincidunt neque, at finibus nibh porttitor sit amet. Maecenas et tempor nisl. Donec dictum interdum augue, ac sollicitudin augue consectetur id. Sed sollicitudin tortor velit, nec auctor urna iaculis non. Etiam consequat nibh sem, feugiat eleifend odio imperdiet sed. Praesent luctus sodales imperdiet. Quisque ut sem venenatis, accumsan enim sit amet, cursus mi. Phasellus vitae lorem fermentum, consequat nibh ut, aliquet sem. Nullam sed metus sed lacus aliquet aliquet. Nullam vel felis urna. Sed elementum et nulla vitae ultricies.</p>
+  <p id="p1">So, let's move on to <del><strong>float</strong> and <strong>clear</strong> properties</del> (replaced with <strong>display: flex</strong> CSS property on Nov 20th). These are useful to allow paragraphs for example to move next to each other. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et dolor eleifend, laoreet risus a, pulvinar magna. Suspendisse commodo tincidunt neque, at finibus nibh porttitor sit amet. Maecenas et tempor nisl. Donec dictum interdum augue, ac sollicitudin augue consectetur id. Sed sollicitudin tortor velit, nec auctor urna iaculis non. Etiam consequat nibh sem, feugiat eleifend odio imperdiet sed. Praesent luctus sodales imperdiet. Quisque ut sem venenatis, accumsan enim sit amet, cursus mi. Phasellus vitae lorem fermentum, consequat nibh ut, aliquet sem. Nullam sed metus sed lacus aliquet aliquet. Nullam vel felis urna. Sed elementum et nulla vitae ultricies.</p>
 
   <p id="p2">We'll put this second paragraph to the right of the previous paragraph and see how we can manipulate it. Mauris dui metus, maximus at erat in, pharetra pellentesque erat. In sollicitudin est quis suscipit feugiat. Nulla lobortis pellentesque diam non euismod. Nunc in finibus dui. Vestibulum pulvinar, risus id dignissim convallis, turpis justo sodales dolor, id lobortis magna ipsum id metus. Maecenas vehicula ultrices tempus. Nunc pulvinar libero eget turpis imperdiet, nec volutpat eros condimentum. Cras convallis a libero non ullamcorper.</p>
 
@@ -87,7 +127,7 @@ document.getElementById("demo").innerHTML = x + y;</samp>
   </div>
 
 <hr>
-  <address>Antoine Ménard<br>123-654 Fake St<br>Ottawa, ON<br>K1K 1K1 <small>(this is an address)</small></address>
+  <address>Antoine Ménard<br />123-654 Fake St<br />Ottawa, ON<br />K1K 1K1 <br /><small>(this is an address with <br />font size of 0.8em)</small></address>
 
 
 </body>
